--- a/src/MobilePhonesIMTS/Views/UploadArticles/Index.cshtml
+++ b/src/MobilePhonesIMTS/Views/UploadArticles/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <section>
         <form method="post" enctype="multipart/form-data"
-              asp-controller="UploadArticles" asp-action="Post">
+              asp-controller="UploadArticles" asp-action="PostArticle">
             <div class="form-group">
                 <div class="col-md-10">
                     <p>Upload one or more files using this form:</p>
@@ -20,4 +20,3 @@
         </form>
     </section>
 </div>
-<hr />
