--- a/src/MobilePhonesIMTS/Views/UploadArticles/Index.cshtml
+++ b/src/MobilePhonesIMTS/Views/UploadArticles/Index.cshtml
@@ -1,22 +1,55 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<h1>Upload Files</h1>
-<div class="row">
-    <section>
-        <form method="post" enctype="multipart/form-data"
-              asp-controller="UploadArticles" asp-action="PostArticle">
-            <div class="form-group">
-                <div class="col-md-10">
-                    <p>Upload one or more files using this form:</p>
-                    <input type="file" name="files" multiple />
-                </div>
+
+<div class="content">
+    <div class="wrapper">
+        <div class="upload_choice">
+        <div class="media">
+            <div class="pull-left">
+                <img class="media-object" src="http://pngimg.com/upload_small/book/book_PNG2117.png" />
             </div>
-            <div class="form-group">
-                <div class="col-md-10">
-                    <input type="submit" value="Upload" />
-                </div>
-            </div>
-        </form>
-    </section>
-</div>
+            <div class="media-body">
+                <form method="post" enctype="multipart/form-data"
+                      asp-controller="UploadArticles" asp-action="PostArticle">
+                    <div class="form-group">
+                        <div class="col-md-10">
+                            <p>Upload one or more files using this form:</p>
+
+                            <input type="file" name="files" multiple />
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
+                        <div class="col-md-10">
+                            <input class="btn btn-primary" type="submit" value="Upload" />
+                        </div>
+                    </div>
+                </form>
+
+             </div>
+        </div>
+        </div>
+     </div>
+ </div>
+
+
+        @*<h1>Upload Files</h1>
+            <div class="row">
+                <section>
+                    <form method="post" enctype="multipart/form-data"
+                          asp-controller="UploadArticles" asp-action="PostArticle">
+                        <div class="form-group">
+                            <div class="col-md-10">
+                                <p>Upload one or more files using this form:</p>
+                                <input type="file" name="files" multiple />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-10">
+                                <input type="submit" value="Upload" />
+                            </div>
+                        </div>
+                    </form>
+                </section>
+            </div>*@
