--- a/src/MobilePhonesIMTS/wwwroot/css/site.css
+++ b/src/MobilePhonesIMTS/wwwroot/css/site.css
@@ -48,3 +48,76 @@ textarea {
     display: none
   }
 }
+
+.wrapper{
+  width: 980px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.content::before {
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  display: block;
+  background-image: url("https://static.wixstatic.com/media/922da6_dd9841dda4164a46b7b8ac4b00abefd6~mv2.jpg");
+  
+  transform: scale(1.03);
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
+.content {
+  position: fixed;
+  left: 0;
+  right: 0;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+h1 {
+  margin-bottom: 1em;
+  color: white;
+}
+
+h2 {
+  margin: 1em auto;
+  color: #606060;
+  text-align: center;
+}
+
+.center-btn {
+  margin: 15em auto;
+  position: relative;
+  width: 80%;
+  border: 3px solid #5CB85C;
+  padding: 40px;
+  background-color: #181F2F;
+  border-radius: 10px;
+}
+
+.upload_choice {
+  margin: 7em auto;
+  border: 1px solid #606060;
+  background-color: #D7D3D0;
+  border-radius: 10px;
+  opacity: 0.9;
+}
+
+.media-body {
+  margin-left: 2em;
+}
+
+.media-object{
+
+  margin-left: 2em;
+  width: 250px;
+}
