--- a/src/MobilePhonesIMTS/Views/Account/Register.cshtml
+++ b/src/MobilePhonesIMTS/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewData["Title"].</h2>
 
 <form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-    <h4>Create a new account.</h4>
+    <div style="margin-left: 25%;">
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
@@ -51,11 +51,12 @@
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" style="margin-left: 7em;">
         <div class="col-md-offset-2 col-md-10">
             <button type="submit" class="btn btn-default">Register</button>
         </div>
     </div>
+        </div>
 </form>
 
 @section Scripts {
