--- a/src/MobilePhonesIMTS/Views/UploadArticles/Index.cshtml
+++ b/src/MobilePhonesIMTS/Views/UploadArticles/Index.cshtml
@@ -1,55 +1,63 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+@model MobilePhonesIMTS.Models.ArticleViewModel
+
+@{
+    ViewData["Title"] = "Create";
 }
 
-<div class="content">
-    <div class="wrapper">
-        <div class="upload_choice">
-        <div class="media">
-            <div class="pull-left">
-                <img class="media-object" src="http://pngimg.com/upload_small/book/book_PNG2117.png" />
+<h2>Create</h2>
+
+<form method="post" enctype="multipart/form-data"
+                      asp-controller="UploadArticles" asp-action="PostArticleSave" >
+    <div class="form-horizontal">
+        <h4>Article</h4>
+        <hr />
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="Title" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger" />
             </div>
-            <div class="media-body">
-                <form method="post" enctype="multipart/form-data"
-                      asp-controller="UploadArticles" asp-action="PostArticle">
-                    <div class="form-group">
-                        <div class="col-md-10">
-                            <p>Upload one or more files using this form:</p>
-
-                            <input type="file" name="files" multiple />
-                        </div>
-                    </div>
-                    
-                    <div class="form-group">
-                        <div class="col-md-10">
-                            <input class="btn btn-primary" type="submit" value="Upload" />
-                        </div>
-                    </div>
-                </form>
-
-             </div>
         </div>
+        <div class="form-group">
+            <label asp-for="ArticleAbstract" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="ArticleAbstract" class="form-control" />
+                <span asp-validation-for="ArticleAbstract" class="text-danger" />
+            </div>
         </div>
-     </div>
- </div>
+        <div class="form-group">
+            <label asp-for="Category" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Category" class="form-control" />
+                <span asp-validation-for="Category" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="City" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="City" class="form-control" />
+                <span asp-validation-for="City" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="ActualFile" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input type="file" name="specificFile" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+</form>
 
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
-        @*<h1>Upload Files</h1>
-            <div class="row">
-                <section>
-                    <form method="post" enctype="multipart/form-data"
-                          asp-controller="UploadArticles" asp-action="PostArticle">
-                        <div class="form-group">
-                            <div class="col-md-10">
-                                <p>Upload one or more files using this form:</p>
-                                <input type="file" name="files" multiple />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-10">
-                                <input type="submit" value="Upload" />
-                            </div>
-                        </div>
-                    </form>
-                </section>
-            </div>*@
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
