--- a/src/MobilePhonesIMTS/Views/Articles/Index.cshtml
+++ b/src/MobilePhonesIMTS/Views/Articles/Index.cshtml
@@ -1,14 +1,13 @@
 @model IEnumerable<MobilePhonesIMTS.Models.Article>
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 @{
     ViewData["Title"] = "Browse Articles";
 }
 
-<h2>Index</h2>
+<h2>Browse Articles</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -27,10 +26,13 @@
             <th>
                 @Html.DisplayNameFor(model => model.DatePublished)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SystemPath)
-            </th>
-            <th></th>
+
+            @if (SignInManager.IsSignedIn(User))
+            {
+                <td>
+                   Browse the File
+                </td>
+            }
         </tr>
     </thead>
     <tbody>
@@ -51,20 +53,17 @@
             <td>
                 @Html.DisplayFor(modelItem => item.DatePublished)
             </td>
+@if (SignInManager.IsSignedIn(User))
+{
             <td>
-                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
-                <a asp-action="@Context.Request.Host" /uploads/AndroidRevolution.doc"  View Article </a>*@
                 <a asp-controller="uploads" asp-action="@item.SystemPath">  View </a>
-                
-                
             </td>
+}
+else
+{
+        
+}
 
-            <td>
-                
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
         </tr>
 }
     </tbody>
