--- a/src/MobilePhonesIMTS/Views/Account/Login.cshtml
+++ b/src/MobilePhonesIMTS/Views/Account/Login.cshtml
@@ -9,43 +9,45 @@
 }
 
 <h2>@ViewData["Title"].</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section style="margin-left: 60%;">
-            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+
+<form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+            <div class="CenteredProfile">
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Email  " class="col-md-2 control-label" style="padding-right: 9em;"></label>
+                    <label asp-for="Email" class="col-md-2 control-label"></label>
                     <div class="col-md-10">
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Password" class="col-md-2 control-label" style="padding-right: 5em;"></label>
+                    <label asp-for="Password" class="col-md-2 control-label"></label>
                     <div class="col-md-10">
                         <input asp-for="Password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="form-group" style="margin-left: 2em;">
+
+                <div class="form-group CenteredButton">
                     <div class="col-md-offset-2 col-md-10">
-                        <button type="submit" class="btn btn-default">Log in</button>
+                        <button type="submit" class="btn btn-default">Log In</button>
+@*
+    <hr />
+    <p>
+        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
+    </p>
+    <p>
+        <a asp-action="ForgotPassword">Forgot your password?</a>
+    </p>
+*@
+                        </div>
                     </div>
-                </div>
-                <p style="margin-left: 4em;">
-                    <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
-                </p>
-                <p style="margin-left: 4em;">
-                    <a asp-action="ForgotPassword">Forgot your password?</a>
-                </p>
-            </form>
-        </section>
-    </div>
+                    </div>
 
-</div>
 
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
+    </form>
+
+    @section Scripts {
+        @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    }
