--- a/src/MobilePhonesIMTS/Views/UploadArticles/Index.cshtml
+++ b/src/MobilePhonesIMTS/Views/UploadArticles/Index.cshtml
@@ -8,7 +8,7 @@
 
 <form method="post" enctype="multipart/form-data"
                       asp-controller="UploadArticles" asp-action="PostArticleSave" >
-    <div class="form-horizontal">
+    <div class="form-horizontal CenteredProfile">
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-offset-2 col-md-10 CenteredButton">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
