--- a/src/MobilePhonesIMTS/Views/Account/Login.cshtml
+++ b/src/MobilePhonesIMTS/Views/Account/Login.cshtml
@@ -29,8 +29,8 @@
                     </div>
                 </div>
 
-                <div class="form-group CenteredButton">
-                    <div class="col-md-offset-2 col-md-10">
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10 CenteredButton">
                         <button type="submit" class="btn btn-default">Log In</button>
 @*
     <hr />
