--- a/src/MobilePhonesIMTS/Views/Account/Register.cshtml
+++ b/src/MobilePhonesIMTS/Views/Account/Register.cshtml
@@ -51,8 +51,8 @@
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group CenteredButton">
-        <div class="col-md-offset-2 col-md-10">
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10 CenteredButton">
             <button type="submit" class="btn btn-default">Register</button>
         </div>
     </div>
