--- a/src/MobilePhonesIMTS/Views/Shared/_Layout.cshtml
+++ b/src/MobilePhonesIMTS/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="UploadArticles" asp-action="Index">Upload An Article</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Articles" asp-action="Index">List Articles</a></li>
+                    <li><a asp-area="" asp-controller="Articles" asp-action="EditOwn">View & Edit Your Own Aricles</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
