styling front page

--- a/src/MobilePhonesIMTS/Views/Articles/Index.cshtml
+++ b/src/MobilePhonesIMTS/Views/Articles/Index.cshtml
@@ -10,7 +10,7 @@
 
 @if (!SignInManager.IsSignedIn(User))
 {
-    <text>PLEASE LOG IN TO VIEW FULL ARTICLE </text>
+    <h3 class="warningLogin">PLEASE LOG IN TO VIEW FULL ARTICLE </h3>
 }
 
 <table class="table">
