--- a/src/MobilePhonesIMTS/Views/Home/Index.cshtml
+++ b/src/MobilePhonesIMTS/Views/Home/Index.cshtml
@@ -7,7 +7,8 @@
     <div class="wrapper">
         <div class="center-btn text-center" id="login">
             <h1>Welcome to IMTS Library!</h1>
-            <a href="/uploadarticles" class="btn btn-success btn-lg">Upload Your Article</a>
+            <a href="/articles" class="btn btn-success btn-lg indexButtons">Browse Articles</a>
+            <a href="/uploadarticles" class="btn btn-success btn-lg indexButtons">Upload Your Articles</a>
         </div>
     </div>
 </div>
