--- a/src/MobilePhonesIMTS/Views/Articles/EditOwn.cshtml
+++ b/src/MobilePhonesIMTS/Views/Articles/EditOwn.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.City)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DatePublished)
+                Date Published
             </th>
             <th>
                 Actions
@@ -51,7 +51,7 @@
                     @Html.DisplayFor(modelItem => item.DatePublished)
                 </td>
                 <td>
-                    <a asp-controller="uploads" asp-action="@item.SystemPath">  View </a> |
+                    <a asp-controller="uploads" asp-action="@item.SystemPath"> View </a> |
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
                     <a asp-controller="UploadArticles" asp-action="EditFile" asp-route-id="@item.Id">Change File</a>
