--- a/src/MobilePhonesIMTS/Views/Articles/SuccessDelete.cshtml
+++ b/src/MobilePhonesIMTS/Views/Articles/SuccessDelete.cshtml
@@ -9,7 +9,7 @@
 
                 <h1 style="text-align: center; color: #5CB85C;">Congratulations</h1>
 
-                <div> <h3 style="text-align: center; color: white;"> Sucessfully deleted an article! </h3> </div>
+                <div> <h3 style="text-align: center; color: white;"> Sucessfully deleted the article @ViewData["ArticleTitle"] </h3> </div>
             
                     <div class="col-md-offset-2 col-md-10" style="margin: 6em;" >
                         <input type="submit" onclick="parent.location='@Url.Action("Index", "Articles")';return false;" value="Back To Articles" class="btn btn-default" />
